Add description of grid sensitivity analysis to writeup Start to code up the optimization sensitivity analysis

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ _rslurm*/
 
 # Slurm output files that are produced on the cluster
 slurm*.out
+
+# PDFs produced in Rmarkdown directory
+Rmd/*.pdf
